# LocalRadio

./: .gitignore  .gitmodules  APPNOTES.md  BUILD.md  CREDITS.md  HARDWARE.md  LICENSE  LocalRadio copy-Info.plist  LocalRadio copy2-Info.plist  LocalRadio_Profile.provisionprofile  README.md  SCREENSHOTS.md  SInt16 85000 Hz audio.lpcm
Icecast-Server/: Icecast-Server git and build notes.txt
LocalRadio/: AppDelegate.h  AppDelegate.m  CustomTaskController.h  CustomTaskController.m  DDKeychain_LocalRadio.h  DDKeychain_LocalRadio.m  EZStreamController.h  EZStreamController.m  FCCSearchController.h  FCCSearchController.m  HTTPSWebServerConnection.h  HTTPSWebServerConnection.m  HTTPSWebServerController.m  HTTPWebServerConnection.h  HTTPWebServerConnection.m  HTTPWebServerController.h  HTTPWebServerController.m  IcecastController.h  IcecastController.m  IcecastSourceController.h  IcecastSourceController.m  Info.plist  LocalRadio Notes.rtf  LocalRadio-V2.sqlite3  LocalRadio-V3.sqlite3  LocalRadio-old.sqlite3  LocalRadio.entitlements  LocalRadio.sqlite3  LocalRadioAPI.h  LocalRadioAPI.m  LocalRadioAppSettings.h  LocalRadioAppSettings.m  SDRController.h  SDRController.m  SQLiteController.h  SQLiteController.m  SoxController.h  SoxController.m  TLSManager.h  TLSManager.m  (+23 more)
LocalRadio.xcodeproj/: project.pbxproj
sox/: sox git and build notes.txt
wfm-tools/: README.md  (+4 more)
wfm-tools/stereodemux/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  stereodemux  stereodemux.cc
wfm-tools/stereodemux/.deps/: stereodemux-stereodemux.Po
wfm-tools/stereodemux/autom4te.cache/: output.0  requests  traces.0  traces.1
(+395 files in other folders)
